cabal-version:       2.0
name:                broadcast
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/yigitozkavci/broadcast
bug-reports:         https://github.com/yigitozkavci/broadcast/issues
license:             MIT
license-file:        LICENSE
author:              Yigit Ozkavci
maintainer:          yigitozkavci8@gmail.com
copyright:           2019 Yigit Ozkavci
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/yigitozkavci/broadcast.git

executable broadcast
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.12.0.0
                     
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
